2006-10-17  Akim Demaille  <demaille@gostai.com>

	recheck.
	* build-aux.mk (recheck): New.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	Initialize EXTRA_DIST.
	* build-aux.mk: Do that.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	Rename our install-sh as install-sh-c.
	* install-sh-c: New.
	* build-aux.mk: EXTRA_DIST it.
	* bootstrap: We no longer have to protect install-sh.
	* install-sh: Remove.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	Upgrade URBI_OPENR.
	* urbi-openr.m4: Define OPEN_R_SDK, as it's the straightforward
	name.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	Extend URBI_PTHREAD.
	* urbi-pthread.m4: Check for pthread.h.
	Fix typo.
	Define PTHREAD_LIBS even for windows.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	Fix libport-ci.
	* build-aux.mk: Fix.

2006-10-17  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	r49: Handle more suffixes.

	* autotroll.mk: Handle .cc, .cxx, .C (along with .cpp).

2006-10-17  Akim Demaille  <demaille@gostai.com>

	Use config, add version.hh.in.
	* version.hh.in: New.
	* revision.mk: Adjust.
	* README: Document it.
	* urbi-engine.m4: Build sdk/config.h.

2006-10-16  Akim Demaille  <demaille@gostai.com>

	Don't point to the install kernel when compiling the kernel.
	* urbi-dirs.m4: Fix that.

2006-10-16  Akim Demaille  <akim.demaille@free.fr>

	Fix svn-externals.
	* svn-externals: Correctly remove the option when calling
	svn_externals_update.

2006-10-16  Akim Demaille  <akim.demaille@free.fr>

	install-sh -C.
	* install-sh: Support -C.
	The point is to avoid install urbi headers over and over
	again, to avoid useless recompilations.
	* bootstrap: Protect install-sh from being overriden by
	Automake's.

2006-10-16  Akim Demaille  <akim.demaille@free.fr>

	Add original install-sh.
	* install-sh: New.

2006-10-15  Akim Demaille  <demaille@gostai.com>

	* svn-externals: Add missing fi.

2006-10-10  Akim Demaille  <demaille@gostai.com>

	svn-externals --upgrade=DIR.